[tool.poetry]
name = "starlite-multipart-error"
version = "0.1.0"
description = ""
authors = ["Mitchell Henry <mitchell.henry334@gmail.com>"]
readme = "README.md"
packages = [{include = "starlite_multipart_error"}]

[tool.poetry.dependencies]
python = "^3.9"
starlite = {extras = ["testing"], version = "^1.25.0"}
uvicorn = "^0.18.3"
pytest = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
