[tool.poetry]
name = "starlite-multipart-error"
version = "0.1.0"
description = ""
authors = ["Mitchell Henry <mitchell.henry334@gmail.com>"]
readme = "README.md"
packages = [{include = "starlite_multipart_error"}]

[tool.poetry.dependencies]
python = "^3.9"
cryptography = "*"
httpx = "*"
pytest = "*"
starlite = { git = "https://github.com/starlite-api/starlite.git", branch = "main"}
uvicorn = "*"
pydantic = "^1.10.2"
starlite-multipart = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
